# glassbox

./: .clang-format  .gitignore  CITATION.cff  DECISIONS.md  README.md  index.html  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
assets/: glassbox.js  grok.grokpack  index-3cuPlkUW.js  index-B4Hu_ugE.css
assets/features/: f0.json  f1.json  f10.json  f1000.json  f1002.json  f1004.json  f1005.json  f1009.json  f1011.json  f1014.json  f1017.json  f1018.json  f1019.json  f102.json  f1020.json  f1021.json  f1022.json  f1023.json  f1024.json  f1025.json  f1026.json  f1027.json  f1028.json  f1029.json  f1031.json  f1033.json  f1034.json  f1035.json  f1036.json  f1037.json  f1038.json  f1039.json  f104.json  f1040.json  f1043.json  f1044.json  f1047.json  f1049.json  f105.json  f1051.json  (+739 more)
docs/: BENCHMARKS.md  GBX_FORMAT.md  INTERVIEW_DRILL.md  METHODS.md  SAMPLES.md  WALKTHROUGH.md
docs/figures/grok/: findings.json
engine/: CMakeLists.txt
engine/src/: engine.hpp  gbx.hpp  json.hpp  main.cpp  model.hpp  ops.hpp  sae.hpp  sampler.hpp  tokenizer.hpp  wasm_api.cpp
engine/tests/: test_ops.cpp  test_parity.cpp  test_tokenizer.cpp
grok/: analyze.py  export_web.py  fourier.py  model.py  train_grok.py
phase_reports/: phase0_environment.md  phase1_train.md  phase2_grok.md  phase3_sae.md  phase4_engine.md  phase5_web.md  phase6_final.md
runs/: engine_bench.txt
runs/grok/: config.json  log.csv  progress.csv
runs/lm_s/: config.json  log.csv
runs/sae_l2/: config.json  log.csv
sae/: cache_activations.py  dashboards.py  model.py  train_sae.py
scripts/: build_site.sh  deploy_site.sh  dev.sh  export_gbx.py  fetch_gutenberg_kids.py  fetch_tinystories.py  launch_lm.sh  make_fixtures.py  make_gallery.py  monitor.sh  pack_data.py  post_lm_pipeline.sh  train_tokenizer.py
tests/: test_bpe.py  test_gpt.py  test_grok.py  test_sae.py
tests/fixtures/: tiny_encodings.json  tiny_gpt_logits.f32  tiny_gpt_logits.pt  tiny_gpt_state.pt  tiny_gpt_tokens.pt  tiny_gpt_tokens.u16  tiny_model.gbx  tiny_sae_input.f32  tiny_sae_state.pt  tiny_sae_xhat.f32  tiny_sae_z.f32  tiny_tokenizer.json
train/: bpe.py  config.py  data.py  gpt.py  sample.py  train_lm.py
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/public/assets/: glassbox.wasm
web/public/assets/features/: f100.json  f1001.json  f1003.json  f1006.json  f1007.json  f1008.json  f101.json  f1010.json  f1012.json  f1013.json  f1015.json  f1016.json  f103.json  f1030.json  f1032.json  f1041.json  f1042.json  f1045.json  f1046.json  f1048.json  f1050.json  f1052.json  (+736 more)
web/src/: App.tsx  charts.ts  engine.ts  grokpack.ts  style.css
web/src/exhibits/: Features.tsx  Grokking.tsx  Steering.tsx
